Se hizo la estructura HTML, y se agrego la funcion limpiar

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,23 @@
 </head>
 
 <body>
+<header>
+  <h1>ANALIZADOR DE TEXTO</h1><br><br><br>
+</header>
+  <textarea name="user-input" cols="80" 
+  rows="15"></textarea><br><br>
+  <ul>
+    <li>Palabras</li>
+    <li>Caracteres</li>
+    <li>Números</li>
+    <li>Caracteres sin espacios ni signos de puntuación</li>
+    <li>Suma Total Números</li>
+    <li>Promedio Longitud</li>
+  </ul><br>
+  <button id="reset-button">Limpiar Métricas</button><br><br><br><br>
+  <footer>
+    <p>Nancy Nallely Martínez Domínguez</p>
+  </footer>
   <script src="index.js" type="module"></script>
 </body>
 </html>
