--- a/src/index.html
+++ b/src/index.html
@@ -8,23 +8,27 @@
 </head>
 
 <body>
-<header>
-  <h1>ANALIZADOR DE TEXTO</h1><br><br><br>
-</header>
-  <textarea name="user-input" cols="80" 
-  rows="15"></textarea><br><br>
-  <ul>
+
+  <video src="cascada.mp4" autoplay loop muted preload></video>
+  <header>
+    <h1>ANALIZADOR DE TEXTO</h1><br><br>
+  </header>
+  <main>
+  <textarea name="user-input" cols="80" rows="5" placeholder="Ingrese Texto" autofocus></textarea><br><br>
+  <button id="reset-button">Limpiar Métricas</button><br><br><br><br>
+  <ul class="resultados">
     <li>Palabras</li>
     <li>Caracteres</li>
     <li>Números</li>
-    <li>Caracteres sin espacios ni signos de puntuación</li>
+    <li>Caracteres sin espacios</li>
     <li>Suma Total Números</li>
     <li>Promedio Longitud</li>
   </ul><br>
-  <button id="reset-button">Limpiar Métricas</button><br><br><br><br>
+</main>
   <footer>
     <p>Nancy Nallely Martínez Domínguez</p>
   </footer>
   <script src="index.js" type="module"></script>
 </body>
+
 </html>
