Funcionalidad y estilo del boton limpiar metricas

--- a/src/index.html
+++ b/src/index.html
@@ -14,16 +14,16 @@
     <h1>ANALIZADOR DE TEXTO</h1><br><br>
   </header>
   <main>
+    <ul class="resultados">
+      <li>Palabras</li>
+      <li>Caracteres</li>
+      <li>Números</li>
+      <li>Caracteres sin espacios</li>
+      <li>Suma Total Números</li>
+      <li>Promedio Longitud</li>
+    </ul><br>
   <textarea name="user-input" cols="80" rows="5" placeholder="Ingrese Texto" autofocus></textarea><br><br>
-  <button id="reset-button">Limpiar Métricas</button><br><br><br><br>
-  <ul class="resultados">
-    <li>Palabras</li>
-    <li>Caracteres</li>
-    <li>Números</li>
-    <li>Caracteres sin espacios</li>
-    <li>Suma Total Números</li>
-    <li>Promedio Longitud</li>
-  </ul><br>
+  <button id="reset-button">Limpiar Métricas</button>
 </main>
   <footer>
     <p>Nancy Nallely Martínez Domínguez</p>
