--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,12 @@
   </header>
   <main>
     <ul class="resultados">
-      <li>Palabras</li>
-      <li>Caracteres</li>
-      <li>Números</li>
-      <li>Caracteres sin espacios</li>
-      <li>Suma Total Números</li>
-      <li>Promedio Longitud</li>
+      <li class="Palabras">Palabras</li>
+      <li class="Caracteres">Caracteres</li>
+      <li class="Numeros">Números</li>
+      <li class="Caracteressinespacios">Caracteres sin espacios</li>
+      <li class="Suma">Suma Total Números</li>
+      <li class="Promediolongitud">Promedio Longitud</li>
     </ul><br>
   <textarea name="user-input" cols="80" rows="5" placeholder="Ingrese Texto" autofocus></textarea><br><br>
   <button id="reset-button">Limpiar Métricas</button>
