Di funcionalidad a la metrica numeros y di estilo al footer

--- a/src/index.html
+++ b/src/index.html
@@ -22,11 +22,11 @@
       <li class="Suma">Suma Total Números</li>
       <li class="Promediolongitud">Promedio Longitud</li>
     </ul><br>
-  <textarea name="user-input" cols="80" rows="5" placeholder="Ingrese Texto" autofocus></textarea><br><br>
-  <button id="reset-button">Limpiar Métricas</button>
-</main>
+    <textarea name="user-input" cols="80" rows="5" placeholder="Ingrese Texto" autofocus></textarea><br><br>
+    <button id="reset-button">Limpiar Métricas</button>
+  </main>
   <footer>
-    <p>Nancy Nallely Martínez Domínguez</p>
+    <p>Autora: Nancy Nallely Martínez Domínguez</p>
   </footer>
   <script src="index.js" type="module"></script>
 </body>
