--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,39 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Analizador de texto</title>
+  <title>Proyecto1</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
-<body>
-  <script src="index.js" type="module"></script>
-</body>
+<body class="colorDeFondo">
+  <!--Cuadro en donde irá el resultado de las funciones.-->
+ 
+  <header class="centrar">
+    <h1 class="titulo"> Analizador de texto</h1>
+    </header>
+    
+<p>
+  <ul class="ulEstilo">
+    <li class="liEstilo">Recuento de caracteres <span class="cuadroResultado" id="contarCaracteres"></span></li>
+    <li class="liEstilo">Recuento de palabras <span id="contarPalabras"></span></li>
+    <li class="liEstilo">Sin caracteres <span id="sinCaracteres"></span></li>
+    <li class="liEstilo">Promedio de longitud <span id="longitudPromedio"></span></li> 
+    <li class="liEstilo">Recuento de numeros <span id="contarNumeros"></span></li>
+    <li class="liEstilo">Suma de numeros <span id="sumaNumeros"></span></li>
+  </ul>
+</p>
+ 
+<textarea id="user-input" class="cuadroDeTexto" type="string">
+</textarea>
+
+<div>
+  <button type="button" id="reset-button" class="boton" >Limpiar texto</button>
+</div>
+
+<footer class="autor">
+  <p>Bernardita del Pino Villaseca</p>
+    </footer>
+
+    <script src="index.js"></script>
+  </body>
 </html>
