--- a/src/index.html
+++ b/src/index.html
@@ -15,18 +15,18 @@
   </header>
   <main>
     <ul class="resultados">
-      <li class="Palabras">Palabras</li>
       <li class="Caracteres">Caracteres</li>
-      <li class="Numeros">Números</li>
       <li class="Caracteressinespacios">Caracteres sin espacios</li>
+      <li class="Palabras">Palabras</li>
+      <li class="Numeros">Números</li>
       <li class="Suma">Suma Total Números</li>
       <li class="Promediolongitud">Promedio Longitud</li>
     </ul><br>
-  <textarea name="user-input" cols="80" rows="5" placeholder="Ingrese Texto" autofocus></textarea><br><br>
-  <button id="reset-button">Limpiar Métricas</button>
-</main>
+    <textarea name="user-input" cols="80" rows="5" placeholder="Ingrese Texto" autofocus></textarea><br><br>
+    <button id="reset-button">Limpiar Métricas</button>
+  </main>
   <footer>
-    <p>Nancy Nallely Martínez Domínguez</p>
+    <p>Autora: Nancy Nallely Martínez Domínguez</p>
   </footer>
   <script src="index.js" type="module"></script>
 </body>
