--- a/src/index.html
+++ b/src/index.html
@@ -3,28 +3,29 @@
 <head>
   <meta charset="utf-8">
   <title>Proyecto1</title>
-  <link rel="stylesheet"href="style.css"/>
+  <link rel="stylesheet" href="style.css" />
 </head>
+
 <body class="colorDeFondo">
   <header>
-    <h1> Analizador de texto</h1>
+    <h1> Analizador de texto </h1>
     </header>
   <ul class="ulEstilo">
-    <li class="liEstilo">Recuento de caracteres:<span id="contarCaracteres"class="cuadroResultado"></span></li>
-    <li class="liEstilo">Recuento de palabras:<span id="contarPalabras"class="cuadroResultado"></span></li>
-    <li class="liEstilo">Sin caracteres:<span id="sinCaracteres"class="cuadroResultado"></span></li>
-    <li class="liEstilo">Promedio de longitud:<span id="longitudPromedio"class="cuadroResultado"></span></li> 
-    <li class="liEstilo">Recuento de numeros:<span id="contarNumeros"class="cuadroResultado"></span></li>
-    <li class="liEstilo">Suma de numeros:<span id="sumaNumeros"class="cuadroResultado"></span></li>
+    <li class="liEstilo">Recuento de caracteres: [ <span id="contarCaracteres" class="cuadroResultado"></span> ] </li>
+    <li class="liEstilo">Recuento de palabras: [ <span id="contarPalabras" class="cuadroResultado"></span> ] </li>
+    <li class="liEstilo">Sin caracteres: [ <span id="sinCaracteres" class="cuadroResultado"></span> ] </li>
+    <li class="liEstilo">Promedio de longitud: [ <span id="longitudPromedio" class="cuadroResultado"></span> ] </li> 
+    <li class="liEstilo">Recuento de numeros: [ <span id="contarNumeros" class="cuadroResultado"></span> ] </li>
+    <li class="liEstilo">Suma de numeros: [ <span id="sumaNumeros" class="cuadroResultado"></span> ] </li>
   </ul>
-<textarea name="user-input"type="text">
+<textarea name="user-input" type="text">
 </textarea>
 <div>
-  <button type="button"id="reset-button">Limpiar texto</button>
+  <button type="button" id="reset-button">Limpiar texto</button>
 </div>
 <footer>
   <p>Bernardita del Pino Villaseca</p>
     </footer>
-    <script src="index.js"type="module"></script>
+    <script src="index.js" type="module"></script>
   </body>
 </html>
