--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
   <button type="button" id="reset-button">Limpiar texto</button>
 </div>
 <footer>
-  <p>Bernardita del Pino Villaseca</p>
+  <p>Creado por Bernardita del Pino Villaseca</p>
     </footer>
     <script src="index.js" type="module"></script>
   </body>
