--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,12 @@
     <h1> Analizador de texto </h1>
     </header>
   <ul class="ulEstilo">
-    <li class="liEstilo">Recuento de caracteres: [ <span id="contarCaracteres" class="cuadroResultado"></span> ] </li>
-    <li class="liEstilo">Recuento de palabras: [ <span id="contarPalabras" class="cuadroResultado"></span> ] </li>
-    <li class="liEstilo">Sin caracteres: [ <span id="sinCaracteres" class="cuadroResultado"></span> ] </li>
-    <li class="liEstilo">Promedio de longitud: [ <span id="longitudPromedio" class="cuadroResultado"></span> ] </li> 
-    <li class="liEstilo">Recuento de numeros: [ <span id="contarNumeros" class="cuadroResultado"></span> ] </li>
-    <li class="liEstilo">Suma de numeros: [ <span id="sumaNumeros" class="cuadroResultado"></span> ] </li>
+    <li class="liEstilo">Recuento de caracteres: <span id="contarCaracteres" class="cuadroResultado"></span> </li>
+    <li class="liEstilo">Sin caracteres: <span id="sinCaracteres" class="cuadroResultado"></span> </li> 
+    <li class="liEstilo">Recuento de palabras: <span id="contarPalabras" class="cuadroResultado"></span> </li>
+    <li class="liEstilo">Recuento de numeros: <span id="contarNumeros" class="cuadroResultado"></span> </li>
+    <li class="liEstilo">Suma de numeros: <span id="sumaNumeros" class="cuadroResultado"></span> </li>
+    <li class="liEstilo">Promedio de longitud: <span id="longitudPromedio" class="cuadroResultado"></span> </li>
   </ul>
 <textarea name="user-input" type="text">
 </textarea>
